# advanced-systems-lab

./: .gitignore  CMakeLists.txt  README.md  backup_baseline.c  baseline.cpp  baseline.h  benchmarks  benchmarks.c  benchmarks.cpp  combined_optimized.h  common.cpp  common.h  helper_utilities.cpp  helper_utilities.h  scalar_optimized.h  sota.h  vector_optimized.h  verifications  verifications.c  verifications.cpp
implementations/: baseline.cpp  baseline_old.cpp  baseline_transposed_emit_prob.cpp  combined_optimized.cpp  reordered_algorithm.cpp  scalar_optimized.cpp  scalar_optimized_blocking.cpp  scalar_optimized_josua.cpp  scalar_optimized_playground.cpp  scalar_optimized_reorder.cpp  sota.cpp  unrolled_emit_prob.cpp  unrolled_optimized.cpp  vector_optimized.cpp  vector_owoptimized.cpp  vectoworized.cpp
misc/: log-normal-clang.csv  log-normal-gcc.csv  log-unroll-clang.csv  log-unroll-gcc.csv  log-vector-clang.csv  log-vector-gcc.csv
plotting/: rooflineplot.py
